changed name of file and added some act funcs to .cu not in cudnn

--- a/kernels/Makefile
+++ b/kernels/Makefile
@@ -1,2 +1,2 @@
 run:
-	nvcc --gpu-architecture=compute_61 --gpu-code=compute_61 --ptx trainingfloat.cu
+	nvcc --gpu-architecture=compute_61 --gpu-code=compute_61 --ptx gocudnnxtra.cu
