need to figure out this workaround

--- a/kernels/Makefile
+++ b/kernels/Makefile
@@ -1,2 +1,10 @@
 run:
+
 	nvcc --gpu-architecture=compute_75 --gpu-code=compute_75 --ptx gocudnnxtra.cu
+
+
+gpuarch75:
+	nvcc --gpu-architecture=compute_75 --gpu-code=compute_75 --ptx gocudnnxtra.cu -o gocudnnxtra75.ptx
+
+gpuarch61:
+	nvcc --gpu-architecture=compute_61 --gpu-code=compute_61 --ptx gocudnnxtra.cu -o gocudnnxtra61.ptx
