added concat kernel

--- a/kernels/Makefile
+++ b/kernels/Makefile
@@ -1,7 +1,5 @@
 run:
-
-	nvcc --gpu-architecture=compute_75 --gpu-code=compute_75 --ptx gocudnnxtra.cu
-
+	nvcc --gpu-architecture=compute_61 --gpu-code=compute_61 --ptx gocudnnxtra.cu -o gocudnnxtra61.ptx
 
 gpuarch75:
 	nvcc --gpu-architecture=compute_75 --gpu-code=compute_75 --ptx gocudnnxtra.cu -o gocudnnxtra75.ptx
